@@ -15,6 +15,7 @@ Changes in @NEW@:
       and then update foo and its containing group at the same time would
       cause conary to try to reinstall the original foo (resulting in path
       conflicts). (CNY-915)
+    * The download thread terminating during an update is now a fatal error.
 
 Changes in 1.0.31:
   o Client Changes:
